feat(pcm): begin work on pcm propagation logic